--- a/03_JavaScript/JavaScript - 8/for_each.html
+++ b/03_JavaScript/JavaScript - 8/for_each.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>For Each in JS</title>
-</head>
-<body>
+  </head>
+  <body>
     <script src="for_each.js"></script>
-</body>
+  </body>
 </html>
