New HTML concept and JS

--- a/03_JavaScript/JavaScript - 13/sending_headers.html
+++ b/03_JavaScript/JavaScript - 13/sending_headers.html
@@ -6,6 +6,7 @@
     <title>Sending Headers using Axios</title>
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="sending_headers.js"></script>
 </body>
 </html>
