--- a/03_JavaScript/JavaScript - 12/colorChangeUsingAwait.html
+++ b/03_JavaScript/JavaScript - 12/colorChangeUsingAwait.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Color Change using Await</title>
-    <meta charset="utf=8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Color Change using Await</title>
   </head>
 
   <body>
